--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Yenileme Sayacı</title>
+  <title>Refresh Counter</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
   <style>
@@ -45,7 +45,7 @@
 </head>
 <body>
   <div class="counter" id="counter">0</div>
-  <button class="reset-btn" id="resetBtn">Sayaçı Sıfırla</button>
+  <button class="reset-btn" id="resetBtn">Reset Counter</button>
 
   <script>
     const counterEl = document.getElementById("counter");
